# torch_mcpu

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
csrc/: CMakeLists.txt
csrc/aten/: OpenRegExtra.cpp  OpenRegMinimal.cpp  UVAView.cpp
csrc/aten/native/: Common.h  Extra.cpp  Extra.h  MCPUFallback.cpp  MCPUFallback.h  Minimal.cpp  Minimal.h
csrc/aten/ops/: Common.h  RawPlan.h  arange.cpp  binary_out.cpp  cumsum.cpp  fill.cpp  gather.cpp  index.cpp  index_fill.cpp  index_put.cpp  index_select_copy.cpp  mm.cpp  normal.cpp  reduction_scatter.cpp  scatter.cpp  softmax_random_argmax.cpp  tensorlist.cpp  topk.cpp  unary_out.cpp  uniform.cpp  where.cpp
csrc/aten/vllm_kernels/: autoregressive_speculator.cpp  bad_words.cpp  block_table.cpp  buffer_utils.cpp  common.cpp  common.h  eagle_padded.cpp  eagle_spec_decode.cpp  gumbel.cpp  input_batch.cpp  logit_bias.cpp  logprob.cpp  mamba_hybrid.cpp  min_p.cpp  penalties.cpp  pointer_gap_bench.cpp  pointer_mlp_bench.cpp  prompt_logprob.cpp  rejection_sampler.cpp  rope.cpp  structured_outputs.cpp
csrc/profiler/stubs/: openreg.cpp
csrc/runtime/: DeviceCachingAllocator.cpp  DeviceCachingAllocator.cpp.bk  DeviceCachingAllocator.h  McpuKernelLaunch.cpp  McpuKernelLaunch.h  McpuKernelTiming.cpp  McpuOpTiming.cpp  OpenRegDeviceAllocator.cpp  OpenRegDeviceAllocator.h  OpenRegEvent.h  OpenRegException.h  OpenRegFunctions.cpp  OpenRegFunctions.h  OpenRegGenerator.cpp  OpenRegGenerator.h  OpenRegGuard.cpp  OpenRegGuard.h  OpenRegHooks.cpp  OpenRegHooks.h  OpenRegHostAllocator.cpp  OpenRegHostAllocator.h  OpenRegSerialization.cpp  OpenRegStream.cpp  OpenRegStream.h
docs/: architecture.md  development.md  how_to_impl_aten_ops.md  kernel_launch_migration.md  mcpu_stream_memory_lifetime.md  openreg_launch_queue_benchmark.md  openreg_stream_mpsc_repair_design_zh.md  privateuse1_distributed.md  send-recv-problems.md
example/02_external_mcpu_kernel_demo/: CMakeLists.txt  external_axpby.cpp  test_external_axpby.py
include/: Macros.h
scripts/: format.sh  install-git-hooks.sh  profile_mcpu_tensor_ops.py  run-clang-format-staged.sh
tests/: distributed_upstream_coverage.md  test_accelerator.py  test_autocast.py  test_autograd.py  test_compile.py  test_compile_mlp.py  test_device.py  test_distributed.py  (+19 more)
(+63 files in other folders)
