set(LIBRARY_NAME torch_mcpu)

file(GLOB_RECURSE SOURCE_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

add_library(${LIBRARY_NAME} SHARED ${SOURCE_FILES})

target_link_libraries(${LIBRARY_NAME} PRIVATE torch_cpu_library openreg)
target_include_directories(${LIBRARY_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/third_party/openreg/include
)
target_compile_definitions(${LIBRARY_NAME} PUBLIC
    TORCH_MCPU_ENABLE_MEMORY_PROTECTION=$<BOOL:${TORCH_MCPU_ENABLE_MEMORY_PROTECTION}>
    TORCH_MCPU_KERNEL_TIMING_USE_TSC=$<BOOL:${TORCH_MCPU_KERNEL_TIMING_USE_TSC}>
)

install(TARGETS ${LIBRARY_NAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
